<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/videoip" />

    <EditText
        android:id="@+id/editIP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_hint"
        android:text="@string/ip" />

    <TextView
        android:id="@+id/textCtrlPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctrlport" />

    <EditText
        android:id="@+id/editCtrlPort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Socketport_hint"
        android:text="@string/Socketport" />

    <Button
        android:id="@+id/button_go"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40.0dip"
        android:text="@string/videoConnect"
        android:textSize="20.0dip"
        android:textColor="#ffffff"
        android:background="#66ccff"
        android:onClick="connectBtn"/>

</LinearLayout>